--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,6 +19,6 @@ spec:
       containers:
       - name: react-app #The name of the react.js application container
         #The Docker image for building the React.js application container
-        image: samulej/react-app:latest 
+        image: santanarulez/react-app:latest 
         ports:
         - containerPort: 3000 #The port for the React.js application container
